[gd_scene load_steps=9 format=3 uid="uid://fl3v3r536fd5"]

[ext_resource type="Script" uid="uid://b3yyy7nosel1y" path="res://assets/particles/grenade_exp/flash.gd" id="1_dyqur"]
[ext_resource type="Texture2D" uid="uid://c6644jhbn03o4" path="res://assets/Kenney's_assets/PNG/White puff/whitePuff00.png" id="1_t3i83"]
[ext_resource type="AudioStream" uid="uid://c7hba02o3ib6t" path="res://assets/audios/拳銃を撃つ.ogg" id="3_bxqjo"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_t3i83"]
emission_shape = 1
emission_sphere_radius = 3.0
gravity = Vector3(0, 5, 0)
linear_accel_min = -2.2351742e-06
linear_accel_max = -2.2351742e-06
radial_accel_min = -2.2351742e-06
radial_accel_max = 19.999998
tangential_accel_min = -2.2351742e-06
tangential_accel_max = 19.999998

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_dyqur"]
load_path = "res://.godot/imported/explosion00.png-76fb8c32b8e9fbc992c2c11a7d6dbc85.s3tc.ctex"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kauq0"]
transparency = 1
albedo_color = Color(18.892157, 18.892157, 18.892157, 0.60784316)
albedo_texture = ExtResource("1_t3i83")
emission_enabled = true
emission_energy_multiplier = 16.0
emission_texture = ExtResource("1_t3i83")
subsurf_scatter_strength = 0.3
backlight_texture = SubResource("CompressedTexture2D_dyqur")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_6jnqb"]
material = SubResource("StandardMaterial3D_kauq0")
size = Vector2(0.5, 0.5)

[sub_resource type="SphereShape3D" id="SphereShape3D_bxqjo"]
radius = 13.877329

[node name="flash" type="Node3D"]
script = ExtResource("1_dyqur")

[node name="fire_sm" type="GPUParticles3D" parent="."]
layers = 128
sorting_offset = 1.0
gi_lightmap_texel_scale = 0.01
emitting = false
amount = 20
one_shot = true
speed_scale = 3.45
explosiveness = 1.0
visibility_aabb = AABB(-14.65, -10.675, -10.4, 28.375, 30.445, 22.43)
process_material = SubResource("ParticleProcessMaterial_t3i83")
draw_pass_1 = SubResource("QuadMesh_6jnqb")

[node name="exp_audio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_bxqjo")
volume_db = 5.0
autoplay = true

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_bxqjo")

[connection signal="finished" from="fire_sm" to="." method="_on_fire_sm_finished"]
[connection signal="finished" from="exp_audio" to="." method="_on_exp_audio_finished"]
